fixes albums on mobile

--- a/src/Components/Albums/Albums.module.css
+++ b/src/Components/Albums/Albums.module.css
@@ -37,3 +37,16 @@
   justify-content: center;
   box-shadow: var(--shadow-color) 0 0 10px;
 }
+
+@media (max-width: 1400px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+
+@media (max-width: 750px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
